crates/analyzer/tests/snapshots/errors__overflow_i128_pos.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: literal out of range for `i128`
  ┌─ [snippet]:3:8
  │
3 │   i128(170141183460469231731687303715884105728)
  │        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ does not fit into type `i128`


